--- a/search.html
+++ b/search.html
@@ -2,206 +2,256 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Void Search</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Search Void</title>
   <style>
     body {
-      background-color: #0f0f0f;
-      color: #fff;
-      font-family: Arial, sans-serif;
       margin: 0;
-      padding: 0;
+      background-color: #0f0f0f;
+      font-family: Arial, sans-serif;
+      color: #fff;
       display: flex;
       justify-content: center;
+      align-items: flex-start;
+      min-height: 100vh;
     }
-
-    .container {
-      width: 90%;
-      max-width: 540px;
+    .screen {
+      width: 540px;
       padding: 1rem;
     }
-
     h2 {
+      color: #ccc;
       border-bottom: 1px solid #333;
       padding-bottom: 0.5rem;
       margin-top: 2rem;
     }
-
-    .profile {
+    .account, .leaderboard-entry {
       background-color: #1c1c1c;
       border: 1px solid #333;
-      border-radius: 8px;
-      padding: 1rem;
+      padding: 0.7rem;
       margin-bottom: 1rem;
       display: flex;
       align-items: center;
-      gap: 1rem;
-      cursor: pointer;
+      gap: 12px;
+      border-radius: 6px;
       text-decoration: none;
-      color: inherit;
+      color: #ccc;
+      transition: background 0.2s;
     }
-
-    .profile img {
-      width: 60px;
-      height: 60px;
+    .account:hover, .leaderboard-entry:hover {
+      background-color: #2a2a2a;
+    }
+    .avatar {
+      width: 48px;
+      height: 48px;
       border-radius: 50%;
-      border: 2px solid #f44;
+      background-color: #444;
     }
-
-    .profile-info {
+    .info {
       flex: 1;
     }
-
-    .username {
-      font-weight: bold;
-      font-size: 1.1rem;
-      color: #ccc;
-    }
-
-    .bio {
-      color: #888;
-      font-size: 0.9rem;
-    }
-
-    .leaderboard-profile {
-      background-color: #1c1c1c;
-      border: 1px solid #333;
-      padding: 1rem;
-      margin-bottom: 1rem;
-      border-radius: 6px;
-    }
-
-    .leaderboard-profile .rank {
-      font-weight: bold;
-      font-size: 1.1rem;
-      margin-bottom: 0.5rem;
-    }
-
-    .medal {
-      margin-left: 5px;
-    }
-
-    .stat-list {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 0.5rem;
+    .message {
       font-size: 0.85rem;
+      color: #888;
+    }
+    .leaderboard-grid {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 1rem;
+    }
+    .leaderboard-entry .rank {
+      font-size: 1.2rem;
+      margin-right: 0.5rem;
+    }
+    .stats {
+      margin-top: 0.5rem;
+      font-size: 0.8rem;
       color: #aaa;
+    }
+    .live-counter {
+      position: fixed;
+      font-size: 0.9rem;
+      color: #666;
+      background-color: #1a1a1a;
+      padding: 6px 10px;
+      border-radius: 6px;
+      border: 1px solid #333;
+      z-index: 999;
+      right: 10px;
+    }
+    #waste-counter { bottom: 50px; }
+    #like-counter { bottom: 80px; }
+    #scroll-counter { bottom: 110px; }
+    #reel-counter { bottom: 140px; }
+    #story-counter { bottom: 170px; }
+    #comment-counter { bottom: 200px; }
+    #repost-counter { bottom: 230px; }
+    #bookmark-counter { bottom: 260px; }
+    #profile-counter { bottom: 290px; }
+    #post-counter { bottom: 320px; }
+    .bottom-nav {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background-color: #1a1a1a;
+      border-top: 1px solid #333;
+      display: flex;
+      justify-content: space-around;
+      padding: 0.5rem 0;
+    }
+    .bottom-nav a {
+      color: #888;
+      text-decoration: none;
+      font-size: 1.3rem;
+    }
+    #showMoreBtn {
+      background-color: #333;
+      color: #ccc;
+      border: none;
+      padding: 0.6rem 1.2rem;
+      border-radius: 4px;
+      font-size: 0.9rem;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <div class="container">
+  <div class="screen">
     <h2>Accounts</h2>
-    <div id="accountsContainer"></div>
+    <div id="accountList"></div>
+    <button id="showMoreBtn">Show More</button>
 
     <h2>Leaderboard</h2>
-    <div id="leaderboardContainer"></div>
+    <div class="leaderboard-grid" id="leaderboard"></div>
+  </div>
+
+  <div id="waste-counter" class="live-counter"></div>
+  <div id="like-counter" class="live-counter"></div>
+  <div id="scroll-counter" class="live-counter"></div>
+  <div id="reel-counter" class="live-counter"></div>
+  <div id="story-counter" class="live-counter"></div>
+  <div id="comment-counter" class="live-counter"></div>
+  <div id="repost-counter" class="live-counter"></div>
+  <div id="bookmark-counter" class="live-counter"></div>
+  <div id="profile-counter" class="live-counter"></div>
+  <div id="post-counter" class="live-counter"></div>
+
+  <div class="bottom-nav">
+    <a href="index.html">🏠</a>
+    <a href="search.html">🔍</a>
+    <a href="publish.html">➕</a>
+    <a href="reels.html">🎞️</a>
+    <a href="profile.html">👤</a>
   </div>
 
   <script>
-    const funnyBios = [
-      "This account is void.",
-      "Scrolling expert since 2023.",
-      "Probably not real.",
-      "Just here for the void vibes.",
-      "Might be a bot, might not.",
-      "Likes for validation.",
-      "Lost in the feed forever.",
-      "Feed me likes.",
-      "This isn't even my final form.",
-      "Professional lurker."
+    const usernames = ["void_vibes", "scroller3000", "ghostfeed", "lostinloop", "tapmaster", "doomposter", "scrollqueen", "wast3d", "boredagain"];
+    const messages = [
+      "This account is truly void.",
+      "Nothing to see here... literally.",
+      "They've posted more regrets than content.",
+      "Just wasting everyone's time.",
+      "404: Personality not found.",
+      "Award-winning lurker.",
+      "Offline but somehow still online.",
+      "A legend in their own timeline."
     ];
 
-    const usernames = [
-      "ghostwatch", "doomscrollz", "tapout", "glitchgazer", "no_signal",
-      "sadbot", "scrollghoul", "feedzombie", "numbthumbs", "pixelghost"
-    ];
-
-    const stats = usernames.map((user, index) => {
-      return {
-        username: user,
-        avatar: `https://api.dicebear.com/7.x/personas/svg?seed=${user}`,
-        bio: funnyBios[index % funnyBios.length],
-        likesGiven: Math.floor(Math.random() * 200),
-        commentsGiven: Math.floor(Math.random() * 100),
-        repostsDone: Math.floor(Math.random() * 50),
-        postsBookmarked: Math.floor(Math.random() * 60),
-        scrollCount: Math.floor(Math.random() * 400),
-        reelsViewed: Math.floor(Math.random() * 300),
-        storiesViewed: Math.floor(Math.random() * 300),
-        postsPosted: Math.floor(Math.random() * 20),
-        profilesVisited: Math.floor(Math.random() * 120),
-        secondsWasted: Math.floor(Math.random() * 5000)
-      };
+    const getRandomStats = () => ({
+      likes: Math.floor(Math.random() * 300),
+      comments: Math.floor(Math.random() * 200),
+      reels: Math.floor(Math.random() * 100),
+      stories: Math.floor(Math.random() * 100),
+      reposts: Math.floor(Math.random() * 80),
+      bookmarks: Math.floor(Math.random() * 120),
+      scrolls: Math.floor(Math.random() * 400),
+      profiles: Math.floor(Math.random() * 150),
+      posts: Math.floor(Math.random() * 50),
+      wasted: Math.floor(Math.random() * 800)
     });
 
-    const userStats = {
-      username: "you",
-      avatar: `https://api.dicebear.com/7.x/personas/svg?seed=you`,
-      bio: "Just wasting time on purpose.",
-      likesGiven: parseInt(localStorage.getItem("likesGiven")) || 0,
-      commentsGiven: parseInt(localStorage.getItem("commentsGiven")) || 0,
-      repostsDone: parseInt(localStorage.getItem("repostsDone")) || 0,
-      postsBookmarked: parseInt(localStorage.getItem("postsBookmarked")) || 0,
-      scrollCount: parseInt(localStorage.getItem("scrollCount")) || 0,
-      reelsViewed: parseInt(localStorage.getItem("reelsViewed")) || 0,
-      storiesViewed: parseInt(localStorage.getItem("storiesViewed")) || 0,
-      postsPosted: parseInt(localStorage.getItem("postsPosted")) || 0,
-      profilesVisited: parseInt(localStorage.getItem("profilesVisited")) || 0,
-      secondsWasted: parseInt(localStorage.getItem("secondsWasted")) || 0
+    const accountList = document.getElementById("accountList");
+    const leaderboard = document.getElementById("leaderboard");
+    const showMoreBtn = document.getElementById("showMoreBtn");
+    let visibleAccounts = 6;
+
+    const allUsers = usernames.map(u => ({
+      username: u,
+      avatar: `https://api.dicebear.com/7.x/personas/svg?seed=${u}`,
+      message: messages[Math.floor(Math.random() * messages.length)],
+      stats: getRandomStats()
+    }));
+
+    function renderAccounts() {
+      accountList.innerHTML = "";
+      allUsers.slice(0, visibleAccounts).forEach(user => {
+        const link = document.createElement("a");
+        link.className = "account";
+        link.href = `user.html?user=${user.username}`;
+        link.innerHTML = `
+          <img class="avatar" src="${user.avatar}" />
+          <div class="info">
+            <div>@${user.username}</div>
+            <div class="message">${user.message}</div>
+          </div>
+        `;
+        accountList.appendChild(link);
+      });
+    }
+
+    showMoreBtn.onclick = () => {
+      visibleAccounts = allUsers.length;
+      renderAccounts();
+      showMoreBtn.style.display = "none";
     };
 
-    stats.splice(Math.floor(Math.random() * stats.length), 0, userStats);
+    const medals = ["🥇", "🥈", "🥉"];
 
-    const accountDiv = document.getElementById("accountsContainer");
-    stats.forEach(stat => {
-      const el = document.createElement("a");
-      el.className = "profile";
-      el.href = `user.html?user=${stat.username}`;
-      el.innerHTML = `
-        <img src="${stat.avatar}" alt="avatar">
-        <div class="profile-info">
-          <div class="username">@${stat.username}</div>
-          <div class="bio">${stat.bio}</div>
-        </div>`;
-      accountDiv.appendChild(el);
-    });
+    function renderLeaderboard() {
+      const sorted = [...allUsers].sort((a, b) => {
+        const scoreA = Object.values(a.stats).reduce((s, v) => s + v, 0);
+        const scoreB = Object.values(b.stats).reduce((s, v) => s + v, 0);
+        return scoreB - scoreA;
+      });
 
-    const leaderboard = [...stats].sort((a, b) => {
-      const totalA = Object.values(a).slice(3).reduce((acc, val) => acc + val, 0);
-      const totalB = Object.values(b).slice(3).reduce((acc, val) => acc + val, 0);
-      return totalB - totalA;
-    });
+      sorted.forEach((user, i) => {
+        const div = document.createElement("a");
+        div.className = "leaderboard-entry";
+        div.href = `user.html?user=${user.username}`;
+        const rank = medals[i] || `#${i+1}`;
+        div.innerHTML = `
+          <div class="rank">${rank}</div>
+          <img class="avatar" src="${user.avatar}" />
+          <div class="info">
+            <div>@${user.username}</div>
+            <div class="stats">
+              Likes: ${user.stats.likes} • Comments: ${user.stats.comments} • Reels: ${user.stats.reels}<br>
+              Stories: ${user.stats.stories} • Reposts: ${user.stats.reposts} • Bookmarks: ${user.stats.bookmarks}<br>
+              Scrolls: ${user.stats.scrolls} • Profiles: ${user.stats.profiles} • Posts: ${user.stats.posts} • Wasted: ${user.stats.wasted} min
+            </div>
+          </div>
+        `;
+        leaderboard.appendChild(div);
+      });
+    }
 
-    const leaderboardDiv = document.getElementById("leaderboardContainer");
-    leaderboard.forEach((stat, index) => {
-      const el = document.createElement("div");
-      el.className = "leaderboard-profile";
+    function updateLiveCounters() {
+      const get = key => parseInt(localStorage.getItem(key)) || 0;
+      document.getElementById("waste-counter").textContent = `Minutes wasted: ${Math.floor(get("secondsWasted") / 60)}`;
+      document.getElementById("like-counter").textContent = `Likes given: ${get("likesGiven")}`;
+      document.getElementById("scroll-counter").textContent = `Scrolls done: ${get("scrollCount")}`;
+      document.getElementById("reel-counter").textContent = `Reels viewed: ${get("reelsViewed")}`;
+      document.getElementById("story-counter").textContent = `Stories viewed: ${get("storiesViewed")}`;
+      document.getElementById("comment-counter").textContent = `Comments given: ${get("commentsGiven")}`;
+      document.getElementById("repost-counter").textContent = `Reposts done: ${get("repostsDone")}`;
+      document.getElementById("bookmark-counter").textContent = `Bookmarks: ${get("postsBookmarked")}`;
+      document.getElementById("profile-counter").textContent = `Profiles visited: ${get("profilesVisited")}`;
+      document.getElementById("post-counter").textContent = `Posts posted: ${get("postsPosted")}`;
+    }
 
-      let medal = "";
-      if (index === 0) medal = "🥇";
-      else if (index === 1) medal = "🥈";
-      else if (index === 2) medal = "🥉";
-
-      el.innerHTML = `
-        <div class="rank">#${index + 1} ${medal} @${stat.username}</div>
-        <img src="${stat.avatar}" alt="avatar" style="width: 50px; height: 50px; border-radius: 50%; margin-bottom: 0.5rem; border: 2px solid #f44;">
-        <div class="stat-list">
-          <div>Likes: ${stat.likesGiven}</div>
-          <div>Comments: ${stat.commentsGiven}</div>
-          <div>Reposts: ${stat.repostsDone}</div>
-          <div>Bookmarks: ${stat.postsBookmarked}</div>
-          <div>Scrolls: ${stat.scrollCount}</div>
-          <div>Reels: ${stat.reelsViewed}</div>
-          <div>Stories: ${stat.storiesViewed}</div>
-          <div>Posts: ${stat.postsPosted}</div>
-          <div>Profiles: ${stat.profilesVisited}</div>
-          <div>Minutes: ${Math.floor(stat.secondsWasted / 60)}</div>
-        </div>
-      `;
-      leaderboardDiv.appendChild(el);
-    });
+    renderAccounts();
+    renderLeaderboard();
+    updateLiveCounters();
   </script>
 </body>
 </html>
